# CloverAPI

./: CMakeLists.txt  README.md
include/CloverNT/API/: Expected.hpp  Logger.hpp  Macros.hpp
include/CloverNT/API/Events/: Cancellable.hpp  DllEvent.hpp  Event.hpp  EventBus.hpp  Listener.hpp
include/CloverNT/API/Memory/: Hook.hpp  Memory.hpp
include/CloverNT/API/Plugin/: JsPlugin.hpp  Manifest.hpp  NativePlugin.hpp  Plugin.hpp  PluginManager.hpp  RegisterHelper.hpp  Version.hpp
include/CloverNT/API/Utils/: DynamicLibrary.hpp  System.hpp
src/API/: CMakeLists.txt  Logger.cpp
src/API/Utils/: DynamicLibrary.Linux.cpp  DynamicLibrary.Windows.cpp  DynamicLibrary.cpp  System.Linux.cpp  System.Windows.cpp  System.cpp
